# FacebookFix

./: .env.example  .gitignore  README.md  app.py  exceptions.py  pyproject.toml  utils.py  worker.js
extractors/: __init__.py  embed.py  meta.py  photo.py  video.py
templates/: base.html
