[tool.poetry]
name = "facebookfix"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "0BSD"
readme = "README.md"

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = "^3.11"
sanic = "^23.3.0"
sanic-ext = "^23.3.0"
Jinja2 = "^3.1.2"
aiohttp = "^3.8.5"
yarl = "^1.9.2"
python-dotenv = "^1.0.0"
selectolax = "^0.3.14"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
